Some adjustment made

--- a/app/src/main/res/layout/menu_item_view.xml
+++ b/app/src/main/res/layout/menu_item_view.xml
@@ -4,25 +4,27 @@
     android:layout_height="115dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:background="#00ffffff"
+    android:background="#ffffff"
     android:orientation="vertical"
+
     android:padding="2dp"
     android:id="@+id/llMenuItem">
 
     <ImageView
             android:layout_width="95dp"
             android:layout_height="90dp"
+            android:layout_gravity="center_horizontal"
             android:id="@+id/imgDishItem"
             android:background="@drawable/bakedbrie"
             android:cropToPadding="true"
             />
     <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:id="@+id/txtDishItem"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:textStyle="bold"
-            android:background="#ffffffff"
+            android:background="#00ffffff"
             android:text="Some Name"/>
 
 </LinearLayout>
