new instance of BigOvenDataFetch created

--- a/app/src/main/res/layout/item_price_dialog.xml
+++ b/app/src/main/res/layout/item_price_dialog.xml
@@ -40,7 +40,8 @@
                     android:id="@+id/imgDish"
                     android:layout_width="120dp"
                     android:layout_height="120dp"
-                    android:background="@drawable/crostini"/>
+                    android:src="@drawable/placeholder"
+                    android:scaleType="fitXY"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
