--- a/app/src/main/res/layout/menu_item_view.xml
+++ b/app/src/main/res/layout/menu_item_view.xml
@@ -15,9 +15,9 @@
             android:layout_height="90dp"
             android:layout_gravity="center_horizontal"
             android:id="@+id/imgDishItem"
-            android:background="@drawable/bakedbrie"
-            android:cropToPadding="true"
-            />
+            android:src="@drawable/placeholder"
+            android:scaleType="fitXY"
+        />
 
     <TextView
             android:layout_width="wrap_content"
